use GNUInstallDirs for detecting install paths
This helps with multilib builds

Signed-off-by: Khem Raj <raj.khem@gmail.com>

--- a/sources/ade/CMakeLists.txt
+++ b/sources/ade/CMakeLists.txt
@@ -47,12 +47,14 @@ if(BUILD_ADE_DOCUMENTATION)
                       VERBATIM)
 endif()
 
+include(GNUInstallDirs)
+
 install(TARGETS ade COMPONENT dev
         EXPORT adeTargets
-        ARCHIVE DESTINATION lib
-        LIBRARY DESTINATION lib
-        RUNTIME DESTINATION lib
-        INCLUDES DESTINATION include)
+	ARCHIVE DESTINATION ${CMAKE_INSTALL_LIBDIR}
+        LIBRARY DESTINATION ${CMAKE_INSTALL_LIBDIR}
+        RUNTIME DESTINATION ${CMAKE_INSTALL_LIBDIR}
+	INCLUDES DESTINATION ${CMAKE_INSTALL_INCLUDEDIR})
 
 install(EXPORT adeTargets DESTINATION share/ade COMPONENT dev)
 
