--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -17,8 +17,7 @@ option(BUILD_ADE_TUTORIAL      "Build tutorial samples"           OFF)
 option(FORCE_ADE_ASSERTS       "Always enable ADE_ASSERT"         OFF)
 option(BUILD_ADE_DOCUMENTATION "Build doxygen documentation"      OFF)
 
-set(ADE_CXX_STANDARD 11 CACHE STRING "C++ standard")
-set(CMAKE_CXX_STANDARD ${ADE_CXX_STANDARD})
+set(CMAKE_CXX_STANDARD 11 CACHE STRING "C++ standard")
 
 # TODO: this is horrible hack, we must follow cmake
 # build/install policy
@@ -46,8 +45,6 @@ function(add_security_flags target)
         endif()
     endif()
 endfunction()
-
-# set(CMAKE_CXX_STANDARD 11)
 
 if (MSVC)
     add_definitions(-D_SCL_SECURE_NO_WARNINGS)
