--- a/.github/workflows/workflow.yaml
+++ b/.github/workflows/workflow.yaml
@@ -10,9 +10,8 @@ jobs:
   Basic_Workflow:
     strategy:
       matrix:
-        version: [11, 14, 17, 20]
+        version: [11, 14, 17, 20, 23]
         os: [
-            ubuntu-18.04,
             ubuntu-20.04,
             ubuntu-22.04,
           ]
@@ -23,7 +22,6 @@ jobs:
 
       - name: Build Stage
         run: |
-          echo ${{ matrix.os }}
           mkdir build && cd build
           cmake -DENABLE_ADE_TESTING=ON -DCMAKE_BUILD_TYPE=Release -DCMAKE_CXX_STANDARD=${{ matrix.version }} ..
           make -j
