CMake: Rename BUILD_STATIC to BUILD_WITH_STATIC_CRT

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -12,7 +12,7 @@ option(ENABLE_ADE_TESTING      "Build tests, require google test" OFF)
 option(BUILD_ADE_TUTORIAL      "Build tutorial samples"           OFF)
 option(FORCE_ADE_ASSERTS       "Always enable ADE_ASSERT"         OFF)
 option(BUILD_ADE_DOCUMENTATION "Build doxygen documentation"      OFF)
-option(BUILD_STATIC "Build static libs" OFF)
+option(BUILD_WITH_STATIC_CRT   "Build with static multi-threaded C Runtime (MS Windows/Visual Studio only)" OFF)
 
 # TODO: this is horrible hack, we must follow cmake
 # build/install policy
@@ -34,7 +34,7 @@ function(add_security_flags target)
         endif()
     elseif(WIN32)
         target_compile_options( ${target} PRIVATE /GS /DynamicBase)
-        if(BUILD_STATIC)
+        if(BUILD_WITH_STATIC_CRT)
             target_compile_options( ${target} PRIVATE "/MT")
         endif()
         if("${CMAKE_SIZEOF_VOID_P}" STREQUAL "4")
