--- a/.github/workflows/workflow.yaml
+++ b/.github/workflows/workflow.yaml
@@ -14,6 +14,7 @@ jobs:
         os: [
             ubuntu-20.04,
             ubuntu-22.04,
+            windows-2022,
           ]
   
     runs-on: ${{ matrix.os }}
@@ -21,13 +22,28 @@ jobs:
       - uses: actions/checkout@v3
 
       - name: Build Stage
+        shell: bash
         run: |
           mkdir build && cd build
-          cmake -DENABLE_ADE_TESTING=ON -DCMAKE_BUILD_TYPE=Release -DCMAKE_CXX_STANDARD=${{ matrix.version }} ..
-          make -j
+
+          if [ "$RUNNER_OS" == "Windows" ]; then
+            cmake -DENABLE_ADE_TESTING=ON -DCMAKE_BUILD_TYPE=Release -DCMAKE_CXX_STANDARD=${{ matrix.version }} -G Ninja ..
+            cmake --build . --target GTest
+            cmake --build .
+
+          elif [ "$RUNNER_OS" == "Linux" ]; then
+            cmake -DENABLE_ADE_TESTING=ON -DCMAKE_BUILD_TYPE=Release -DCMAKE_CXX_STANDARD=${{ matrix.version }} ..
+            make -j
+
+          else
+            echo "$RUNNER_OS not supported"
+            exit 1
+          fi
 
       - name: ADE-Test Stage
+        shell: bash
         run: ./build/bin/ade-tests 
 
       - name: CMN-Test Stage
+        shell: bash
         run: ./build/bin/common-tests
