CI: Remove Ninja as it is not listed in Windows image
https://github.com/actions/runner-images/blob/win22/20231002.1/images/win/Windows2022-Readme.md

--- a/.github/workflows/workflow.yaml
+++ b/.github/workflows/workflow.yaml
@@ -27,7 +27,7 @@ jobs:
           mkdir build && cd build
 
           if [ "$RUNNER_OS" == "Windows" ]; then
-            cmake -DENABLE_ADE_TESTING=ON -DCMAKE_BUILD_TYPE=Release -DCMAKE_CXX_STANDARD=${{ matrix.version }} -G Ninja ..
+            cmake -DENABLE_ADE_TESTING=ON -DCMAKE_BUILD_TYPE=Release -DCMAKE_CXX_STANDARD=${{ matrix.version }} ..
             cmake --build . --target GTest
             cmake --build .
 
